0.8.5
  CriteriaSet constructor refactored to avoid unchecked array creation warnings
  UiUtil.createFormattedField() now uses a MaskFormatter extension which preserves selection and caret position on focus gained
  DefaultEntityConnection.update() bug fixed, did not handle null values in the where condition, "x = null" used instead of the correct "x is null", solved by using EntityCriteria which handles this case correctly
  EntityUtil.hashBy...() functions return value made more specific in order to convey the fact that they respect the iteration order of the collection
  ValueLinks.dateValueLink(), dateValue(), integerValue() and doubleValue(), immediateUpdate parameter added
  EntityUiUtil.createTextField() now also propagates the immediateUpdate parameter in case of date, int and double based values, see above
  DefaultEntityTableModel.DefaultEntityTableSortModel.initializeColumnComparator() now uses the comparator associated with the underlying entity for columns based on foreign key properties
  UiValues.TextUiValue fires change event on focus lost only if the focus event isn't temporary
  FilteredTablePanelTest, some additions
  FilteredTablePanel, minor refactoring to accomodate the above
  UiUtilTest, some additions
  DefaultEntityConnection.selectRowCount() bug fixed, did not work correctly for entities defined with a select query
  DefaultEntityConnectionTest.rowCount() improved due to the above
  UtilTest, some additions
  Unit test coverage improved
  Javadoc improvements
  AbstractFilteredTableModel.filterContents() bug fixed, it now resets the filtering if filterCriteria is set to null
  Unit test coverage improved
  UiUtil.selectFilesOrDirectories() added