@@ -3694,3 +3694,4 @@
   AbstractFilteredTableModel.filterContents() bug fixed, it now resets the filtering if filterCriteria is set to null
   Unit test coverage improved
   UiUtil.selectFilesOrDirectories() added
+  UiUtil.selectFilesOrDirectories() bug fixed
